--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
+    "geist": "^1.5.1",
     "next": "16.1.6",
+    "next-mdx-remote": "^5.0.0",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sugar-high": "^0.9.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
