--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@radix-ui/themes": "^3.3.0",
+        "@react-three/fiber": "^9.3.0",
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
         "next": "16.1.6",
@@ -17,7 +18,8 @@
         "postcss": "^8.5.6",
         "react": "19.2.3",
         "react-dom": "19.2.3",
-        "sugar-high": "^0.9.5"
+        "sugar-high": "^0.9.5",
+        "three": "^0.170.0"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
