--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@radix-ui/themes": "^3.3.0",
+        "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.3.0",
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
@@ -29,6 +30,7 @@
         "eslint": "^9",
         "eslint-config-next": "16.1.6",
         "prettier": "3.8.1",
+        "raw-loader": "^4.0.2",
         "tailwindcss": "^4",
         "typescript": "^5"
     }
